--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
 			<artifactId>json</artifactId>
 			<version>20201115</version>
 		</dependency>
-
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
